k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kmeans-backend-service
spec:
  type: ClusterIP
  selector:
    app: kmeans-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
